Footer is working correctly for most pages. Use alternate footer for pages that do not fit the full page.

--- a/website/form_style.css
+++ b/website/form_style.css
@@ -2,15 +2,25 @@
     background-color: white;
     font-family: 'Lato', sans-serif;
 }
+.html{
+    height: 100%;
+}
+.body {
+    height: 100%;
+    min-height:100%;
+    position: relative;
+}
 .footer {
-    position: static;
-    bottom: 0px;
+    position: relative;
+    right: 0;
+    bottom: 0;
+    left: 0;
     width: 100%;
     height:5%;
     background-color: #00563f;
     color: white;
     text-align: left;
-    padding: 10px;
+    padding: 1rem;
     font-family: 'Lato', sans-serif;
 }
 .h2 {
@@ -28,6 +38,7 @@
 }
 .form {
     .form-inline
+    height: 100%;
 }
 
 .sidenav {
@@ -53,6 +64,7 @@
     background: #eee;
     border-radius: 20px;
     width: 700px;
+    height: 100%;
     font-family:'Lato', sans-serif;
     padding: 10px 10px 10px 10px;
 }
